...
        case more = 3
        
        var title: String {
            switch self {
            case .courses: return "Курсы"
            case .feed: return "Лента"
            case .profile: return "Профиль"
            case .more: return "Ещё"
            }
        }
        
        var icon: String {
            switch self {
            case .courses: return "book.fill"
...
